0.3.4.0
	* Added fromRationalRepetend & toRationalRepetend
	  for safely converting from and to rationals
	  which have a repeating decimal representation like:
	  1 % 28 = 0.03(571428).
	* Various performance improvements.
	* Support vector-0.11
	* Support tasty-0.11
	* Support criterion-1.1.0.0

0.3.3.8
	* Support QuickCheck-2.8.

0.3.3.7
	* Fixed both the

            Prelude Data.Scientific> reads "0.0" :: [(Data.Scientific.Scientific,String)]
            [(0.0,".0"),(0.0,"")]

          problem and the

            read " 8" :: Scientific fails, while read " 8" :: Double succeeds

	  problem.

	  Courtesy of neongreen.

0.3.3.6
	* Fixed bug in the x / y method for Scientific. Since I was using
	  the default implementation: `x * recip y` the operation would
	  diverge when `recip y` had an infinite decimal output.
	  This shouldn't happen when the result of / is finite again.
	  For example: 0.6 / 0.3 should yield 2.0.

	  This is now fixed by using the following implementation:

	  `x / y = fromRational $ toRational x / toRational y`

0.3.3.5
	* Fixed bug when converting the Scientific:
	  `scientific 0 someBigExponent` to a bounded Integral using toBoundedInteger
	  or to a bounded RealFloat using toBoundedRealFloat.
	  If someBigExponent was big enough to trigger the big-exponent protection
	  the beforementioned functions didn't return 0.

	  This is fixed by explicitly handling a coefficient of 0.

0.3.3.4
	* Relax upper version bounds of base and deepseq
	  for the test suite and benchmarks.

0.3.3.3
	* Add support for `deepseq-1.4`.

0.3.3.2
	* Fix parsing of empty digit string (#21).

0.3.3.1
	* Allow newer tasty, tasty-hunit and criterion.

0.3.3.0
	* Add the isFloating or isInteger predicates.
	  Courtesy of Zejun Wu (@watashi).
	* Add the toRealFloat' and toBoundedInteger functions.
	  Courtesy of Fujimura Daisuke (@fujimura).

0.3.2.2
	* Enable package to link with integer-simple instead of
	  integer-gmp using the -finteger-simple cabal flag.