@@ -25,6 +25,7 @@ import qualified Test.SmallCheck.Series             as SC
 import qualified Test.Tasty.SmallCheck              as SC  (testProperty)
 import qualified Test.QuickCheck                    as QC
 import qualified Test.Tasty.QuickCheck              as QC  (testProperty)
+import qualified Data.Binary                        as Binary (encode, decode)
 import qualified Data.Text.Lazy                     as TL  (unpack)
 import qualified Data.Text.Lazy.Builder             as TLB (toLazyText)
 import qualified Data.Text.Lazy.Builder.Scientific  as T
@@ -47,6 +48,11 @@ main = testMain $ testGroup "scientific"
             s /= 0 SC.==> abs (Scientific.coefficient s) `mod` 10 /= 0)
        (QC.forAll normalizedScientificGen    $ \s ->
             s /= 0 QC.==> abs (Scientific.coefficient s) `mod` 10 /= 0)
+
+  , testGroup "Binary"
+    [ testProperty "decode . encode == id" $ \s ->
+        Binary.decode (Binary.encode s) === s
+    ]
 
   , testGroup "Parsing"
     [ testCase "reads \"\""        $ testReads ""        []
